examples/nebula-app-services/k8s-manifests/foobar-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-demo
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: k8s-demo

---

 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: k8s-demo
 spec:
   replicas: 1
   selector:
     matchLabels:
       app: k8s-demo
   template:
     metadata:
       labels:
         app: k8s-demo
     spec:
       containers:
         - name: k8s-demo
           image: quay.io/metral/k8s-demo:0.0.1
           imagePullPolicy: Always
           ports:
             - name: http
               containerPort: 8080
